Обновлены файлы локализации

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -28,6 +28,7 @@
     "sounds": "Sounds",
     "language": "Language",
     "graphicsSettings": "Graphics settings",
+    "fullscreenTitle": "Полный экран",
     "showAnimations": "Show animations",
     "useAntialiasing": "Enable antialiasing in:",
     "fontAntialias": "Fonts",
@@ -38,5 +39,7 @@
     "sfx": "SFX",
     "music": "Music",
     "languageSelect": "Language settings",
+    "aboutGame": "About",
+    "testersTitle": "Testers",
     "continueGame": "Continue"
 }
