--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -28,6 +28,7 @@
     "sounds": "Звуки",
     "language": "Язык",
     "graphicsSettings": "Настройки графики",
+    "fullscreenTitle": "Полный экран",
     "showAnimations": "Показывать анимации",
     "useAntialiasing": "Использовать сглаживание:",
     "fontAntialias": "Шрифтов",
@@ -38,5 +39,7 @@
     "sfx": "Звуковые эффекты",
     "music": "Музыка",
     "languageSelect": "Настройки языка",
+    "aboutGame": "О игре",
+    "testersTitle": "Тестировщики",
     "continueGame": "Продолжить"
 }
