Обновлены файлы локализации

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -28,7 +28,8 @@
     "sounds": "Sounds",
     "language": "Language",
     "graphicsSettings": "Graphics settings",
-    "fullscreenTitle": "Полный экран",
+    "fullscreenTitle": "Fullscreen",
+    "accelerationTitle": "Use GPU acceleration",
     "showAnimations": "Show animations",
     "useAntialiasing": "Enable antialiasing in:",
     "fontAntialias": "Fonts",
