Обновлены файлы локализации

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -35,6 +35,9 @@
     "fontAntialias": "Fonts",
     "guiAntialias": "GUI",
     "textureAntialias": "Other textures",
+    "showGrassTexture": "Show grass texture",
+    "smartRender": "Smart render",
+    "renderDistance": "Render Distance",
     "apply": "Apply",
     "soundSettings": "Sound settings",
     "sfx": "SFX",
