--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -35,6 +35,9 @@
     "fontAntialias": "Шрифтов",
     "guiAntialias": "Интерфейса",
     "textureAntialias": "Текстур",
+    "showGrassTexture": "Показывать текстуру травы",
+    "smartRender": "'Умная' прорисовка",
+    "renderDistance": "Дальность прорисовки",
     "apply": "Применить",
     "soundSettings": "Настройки звуков",
     "sfx": "Звуковые эффекты",
