--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -21,6 +21,7 @@
     "delete": "Удалить",
     "noWorlds": "Нет доступных миров",
     "createWorld": "Создать мир",
+    "createWarning": "Создание мира размерами больше 128x128 может привести к проблемам с памятью!",
     "worldName": "Название",
     "width": "Ширина",
     "height": "Высота",
